src/openim_sdk_ffi.h

extern void ClearC2CHistoryMessage(char* operationID, char* userID);
extern void ClearC2CHistoryMessageFromLocalAndSvr(char* operationID, char* userID);
extern void ClearGroupHistoryMessage(char* operationID, char* groupID);
extern void ClearGroupHistoryMessageFromLocalAndSvr(char* operationID, char* groupID);
extern void InsertSingleMessageToLocalStorage(char* operationID, char* message, char* recvID, char* sendID);
extern void InsertGroupMessageToLocalStorage(char* operationID, char* message, char* groupID, char* senderID);
extern void SearchLocalMessages(char* operationID, char* searchParam);
extern char* GetConversationIDBySessionType(char* sourceID, int sessionType);
extern char* GetAtAllTag();
extern void SetMessageReactionExtensions(char* operationID, char* message, char* reactionExtensionList);
extern void AddMessageReactionExtensions(char* operationID, char* message, char* reactionExtensionList);
extern void DeleteMessageReactionExtensions(char* operationID, char* message, char* reactionExtensionList);
extern void GetMessageListReactionExtensions(char* operationID, char* messageList);
extern void GetMessageListSomeReactionExtensions(char* operationID, char* messageList, char* reactionExtensionList);
extern void SetTypeKeyInfo(char* operationID, char* message, char* typeKey, char* ex, _Bool isCanRepeat);
extern void GetTypeKeyListInfo(char* operationID, char* messageList, char* typeKeyList);
extern void GetAllTypeKeyInfo(char* operationID, char* message);
extern void SignalingInviteInGroup(char* operationID, char* signalInviteInGroupReq);
extern void SignalingInvite(char* operationID, char* signalInviteReq);