lib/openim_sdk_ffi_bindings_generated.dart


  late final _ClearC2CHistoryMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('ClearC2CHistoryMessage');
  late final _ClearC2CHistoryMessage = _ClearC2CHistoryMessagePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void ClearC2CHistoryMessageFromLocalAndSvr(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userID,
  ) {
    return _ClearC2CHistoryMessageFromLocalAndSvr(
      operationID,
      userID,
    );
  }

  late final _ClearC2CHistoryMessageFromLocalAndSvrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('ClearC2CHistoryMessageFromLocalAndSvr');
  late final _ClearC2CHistoryMessageFromLocalAndSvr =
      _ClearC2CHistoryMessageFromLocalAndSvrPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void ClearGroupHistoryMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
  ) {
    return _ClearGroupHistoryMessage(
      operationID,
      groupID,
    );
  }

  late final _ClearGroupHistoryMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('ClearGroupHistoryMessage');
  late final _ClearGroupHistoryMessage =
      _ClearGroupHistoryMessagePtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void ClearGroupHistoryMessageFromLocalAndSvr(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
  ) {
    return _ClearGroupHistoryMessageFromLocalAndSvr(
      operationID,
      groupID,
    );
  }

  late final _ClearGroupHistoryMessageFromLocalAndSvrPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>(
      'ClearGroupHistoryMessageFromLocalAndSvr');
  late final _ClearGroupHistoryMessageFromLocalAndSvr =
      _ClearGroupHistoryMessageFromLocalAndSvrPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void InsertSingleMessageToLocalStorage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> recvID,
    ffi.Pointer<ffi.Char> sendID,
  ) {
    return _InsertSingleMessageToLocalStorage(
      operationID,
      message,
      recvID,
      sendID,
    );
  }

  late final _InsertSingleMessageToLocalStoragePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('InsertSingleMessageToLocalStorage');
  late final _InsertSingleMessageToLocalStorage =
      _InsertSingleMessageToLocalStoragePtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void InsertGroupMessageToLocalStorage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> senderID,
  ) {
    return _InsertGroupMessageToLocalStorage(
      operationID,
      message,
      groupID,
      senderID,
    );
  }

  late final _InsertGroupMessageToLocalStoragePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('InsertGroupMessageToLocalStorage');
  late final _InsertGroupMessageToLocalStorage =
      _InsertGroupMessageToLocalStoragePtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SearchLocalMessages(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> searchParam,
  ) {
    return _SearchLocalMessages(
      operationID,
      searchParam,
    );
  }

  late final _SearchLocalMessagesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SearchLocalMessages');
  late final _SearchLocalMessages = _SearchLocalMessagesPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> GetConversationIDBySessionType(
    ffi.Pointer<ffi.Char> sourceID,
    int sessionType,
  ) {
    return _GetConversationIDBySessionType(
      sourceID,
      sessionType,
    );
  }

  late final _GetConversationIDBySessionTypePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Int)>>('GetConversationIDBySessionType');
  late final _GetConversationIDBySessionType =
      _GetConversationIDBySessionTypePtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, int)>();

  ffi.Pointer<ffi.Char> GetAtAllTag() {
    return _GetAtAllTag();
  }

  late final _GetAtAllTagPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'GetAtAllTag');
  late final _GetAtAllTag =
      _GetAtAllTagPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  void SetMessageReactionExtensions(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> reactionExtensionList,
  ) {
    return _SetMessageReactionExtensions(
      operationID,
      message,
      reactionExtensionList,
    );
  }

  late final _SetMessageReactionExtensionsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SetMessageReactionExtensions');
  late final _SetMessageReactionExtensions =
      _SetMessageReactionExtensionsPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  void AddMessageReactionExtensions(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> reactionExtensionList,
  ) {
    return _AddMessageReactionExtensions(
      operationID,
      message,
      reactionExtensionList,
    );
  }

  late final _AddMessageReactionExtensionsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('AddMessageReactionExtensions');
  late final _AddMessageReactionExtensions =
      _AddMessageReactionExtensionsPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  void DeleteMessageReactionExtensions(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> reactionExtensionList,
  ) {
    return _DeleteMessageReactionExtensions(
      operationID,
      message,
      reactionExtensionList,
    );
  }

  late final _DeleteMessageReactionExtensionsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('DeleteMessageReactionExtensions');
  late final _DeleteMessageReactionExtensions =
      _DeleteMessageReactionExtensionsPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  void GetMessageListReactionExtensions(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> messageList,
  ) {
    return _GetMessageListReactionExtensions(
      operationID,
      messageList,
    );
  }

  late final _GetMessageListReactionExtensionsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetMessageListReactionExtensions');
  late final _GetMessageListReactionExtensions =
      _GetMessageListReactionExtensionsPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetMessageListSomeReactionExtensions(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> messageList,
    ffi.Pointer<ffi.Char> reactionExtensionList,
  ) {
    return _GetMessageListSomeReactionExtensions(
      operationID,
      messageList,
      reactionExtensionList,
    );
  }

  late final _GetMessageListSomeReactionExtensionsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetMessageListSomeReactionExtensions');
  late final _GetMessageListSomeReactionExtensions =
      _GetMessageListSomeReactionExtensionsPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  void SetTypeKeyInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> typeKey,
    ffi.Pointer<ffi.Char> ex,
    bool isCanRepeat,
  ) {
    return _SetTypeKeyInfo(
      operationID,
      message,
      typeKey,
      ex,
      isCanRepeat,
    );
  }

  late final _SetTypeKeyInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Bool)>>('SetTypeKeyInfo');
  late final _SetTypeKeyInfo = _SetTypeKeyInfoPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, bool)>();

  void GetTypeKeyListInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> messageList,
    ffi.Pointer<ffi.Char> typeKeyList,
  ) {
    return _GetTypeKeyListInfo(
      operationID,
      messageList,
      typeKeyList,
    );
  }

  late final _GetTypeKeyListInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetTypeKeyListInfo');
  late final _GetTypeKeyListInfo = _GetTypeKeyListInfoPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void GetAllTypeKeyInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
  ) {
    return _GetAllTypeKeyInfo(
      operationID,
      message,
    );
  }

  late final _GetAllTypeKeyInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetAllTypeKeyInfo');
  late final _GetAllTypeKeyInfo = _GetAllTypeKeyInfoPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SignalingInviteInGroup(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> signalInviteInGroupReq,
  ) {
    return _SignalingInviteInGroup(
      operationID,
      signalInviteInGroupReq,
    );
  }

  late final _SignalingInviteInGroupPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SignalingInviteInGroup');
  late final _SignalingInviteInGroup = _SignalingInviteInGroupPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SignalingInvite(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> signalInviteReq,
  ) {
    return _SignalingInvite(
      operationID,
      signalInviteReq,
    );
  }

  late final _SignalingInvitePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SignalingInvite');
  late final _SignalingInvite = _SignalingInvitePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();
